--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "firebaseui": "^2.7.0",
     "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.16",
-    "vuetify": "^1.0.17"
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.9",
