--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "date-fns": "^1.29.0",
     "firebase": "^4.13.1",
     "firebaseui": "^2.7.0",
     "material-design-icons-iconfont": "^3.0.3",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
     "vuefire": "^1.4.5"
   },
   "devDependencies": {
